--- a/build.gradle
+++ b/build.gradle
@@ -1,66 +1,54 @@
 buildscript {
-    ext {
-        kotlinVersion = "1.2.71"
-        springBootVersion = "2.0.6.RELEASE"
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-    }
+    ext.version = '1'
 }
 
-apply plugin: "idea"
-apply plugin: "kotlin"
-apply plugin: "kotlin-spring"
-apply plugin: "kotlin-jpa"
-apply plugin: "org.springframework.boot"
-apply plugin: "io.spring.dependency-management"
-
-group = "ru.nikstep"
-version = "0.0.1"
-
-sourceCompatibility = 1.8
-
-compileKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.11'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.11'
+    id 'org.jetbrains.kotlin.plugin.allopen' version '1.3.11'
+    id 'org.jetbrains.kotlin.plugin.noarg' version '1.3.11'
+    id 'org.springframework.boot' version '2.1.1.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.6.RELEASE'
 }
-compileTestKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
+
+group 'ru.nikstep'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile 'org.jetbrains.kotlin:kotlin-reflect:1.1.51'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-security"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.6.RELEASE'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.0"
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
-    compile "it.zielke:moji:1.0.2"
-    compile "org.postgresql:postgresql:42.2.2"
-    compile "org.flywaydb:flyway-core:5.2.1"
-    compile group: 'org.springframework.social', name: 'spring-social-core', version: '1.1.6.RELEASE'
-    testCompile "org.springframework.boot:spring-boot-starter-test"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit"
-    compile group: 'org.kohsuke', name: 'github-api', version: '1.95'
-    compile group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version: '5.0.2'
-    compile group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
-    compile group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile 'org.jetbrains.kotlin:kotlin-reflect'
+
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.1.RELEASE'
+
+    compile 'org.postgresql:postgresql:42.2.2'
+    compile 'org.flywaydb:flyway-core:5.2.1'
+
+    compile 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'
+    compile 'com.graphql-java:graphql-spring-boot-starter:5.0.2'
+    compile 'com.graphql-java:graphql-java-tools:5.2.4'
+
+    compile 'org.apache.httpcomponents:httpcore:4.4.10'
+    compile 'org.apache.httpcomponents:httpclient:4.5.6'
+
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4.1'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4'
+
+    compile 'org.apache.logging.log4j:log4j-api:2.11.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.11.1'
+
+    testCompile 'org.jetbrains.kotlin:kotlin-test'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-junit'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
+
+compileKotlin { kotlinOptions.jvmTarget = '1.8' }
+compileTestKotlin { kotlinOptions.jvmTarget = '1.8' }
