--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,9 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.11.1'
     compile 'org.apache.logging.log4j:log4j-core:2.11.1'
 
-    compile group: 'com.github.kittinunf.fuel', name: 'fuel', version: '1.15.0'
+    compile 'com.github.kittinunf.fuel:fuel:1.15.0'
+
+    compile 'com.google.code.gson:gson:2.8.5'
 
     testCompile 'org.jetbrains.kotlin:kotlin-test'
     testCompile 'org.jetbrains.kotlin:kotlin-test-junit'
