--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: root
-    url: jdbc:postgresql://localhost:5432/plagan
+    username: ${REDINK_DATASOURCE_USERNAME}
+    password: ${REDINK_DATASOURCE_PASSWORD}
+    url: ${REDINK_DATASOURCE_URL}
   jpa:
     properties:
       hibernate:
@@ -14,13 +14,14 @@ spring:
 security:
   oauth2:
     client:
-      clientId: fa208beec8ce9fee4d77
-      clientSecret: dbaed4f6fe45d74f803561db0c4236dc5b838843
+      clientId: ${REDINK_CLIENT_ID}
+      clientSecret: ${REDINK_CLIENT_SECRET}
       accessTokenUri: https://github.com/login/oauth/access_token
       userAuthorizationUri: https://github.com/login/oauth/authorize
     resource:
       userInfoUri: https://api.github.com/user
     sso:
       loginPath: /authorization-code/callback
+
 server:
   port: 80
